<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfield_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Titel der Aufgabe"
            app:boxBackgroundColor="@color/background"
            app:boxStrokeColor="@color/purple_500"
            app:counterEnabled="true"
...
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Datum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/textfield_date"
            app:boxBackgroundColor="@color/background"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/purple_500"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/baseline_calendar_month_24"
            app:hintTextColor="@color/purple_500"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark">
            <AutoCompleteTextView
                android:id="@+id/textview_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false">
            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfield_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="Uhrzeit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxBackgroundColor="@color/background"
...
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/baseline_schedule_24"
            app:hintTextColor="@color/purple_500"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark">
            <AutoCompleteTextView
                android:id="@+id/textview_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false">
            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>
...
            android:fontFamily="@font/roboto_medium"
            android:text="Priorität"
            android:textSize="20dp"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfield_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxBackgroundColor="@color/background"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/purple_500"
            app:helperTextTextColor="@android:color/holo_red_dark">
            <AutoCompleteTextView
                android:id="@+id/dropdown_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:fontFamily="@font/roboto_medium">
            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>
...
            android:text="Tasks"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfield_task1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Task 1"
            android:layout_marginTop="4dp"
            app:boxBackgroundColor="@color/background"
            app:boxStrokeColor="@color/purple_500"
...
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="160dp"
            android:text="Aktualisieren"
            android:backgroundTint="@color/purple_500"
            android:layout_marginTop="16dp"
...
