...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/todolist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="82dp"
        android:padding="4dp"
    ></ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:foregroundTint="@color/white"
...
